# chesk

./: CHANGELOG.md  LICENSE  README.md  chesk.cabal
src/: MyLib.hs  Pos.hs  Work.hs
test/: MyLibTest.hs
test/Test/: Arbitrary.hs  QC.hs
