cabal-version:      2.4
name:               chesk
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Emre Guneyler
maintainer:         eguneys@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite chesk-test
    default-language: Haskell2010
    default-extensions:
        StandaloneDeriving
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    other-modules:    Test.Arbitrary,
                      Test.QC
    build-depends:    base ^>=4.14.3.0,
                      chesk,
                      tasty,
                      tasty-quickcheck
